--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "build": "alita build",
     "dev": "alita dev",
     "format": "prettier --write .",
+    "lint": "alita lint",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .ts,.tsx",
+    "lint-staged:js": "",
     "plugin": "alita plugin list",
     "start": "alita dev"
   },
   "lint-staged": {
-    "**/*.less": "stylelint --syntax less",
-    "**/*.css": "stylelint --syntax css",
     "**/*.{ts,tsx}": "npm run lint-staged:js",
     "**/*.{ts,tsx,json,jsx,less}": [
       "git add",
@@ -21,8 +20,9 @@
     ]
   },
   "dependencies": {
-    "@alita/flow": "3.0.0-beta.5",
-    "alita": "3.0.0-beta.15",
+    "@alita/flow": "^3.0.0",
+    "alita": "^3.0.3",
+    "antd-mobile": "^5.16.1",
     "antd-mobile-icons": "^0.2.2"
   },
   "devDependencies": {
@@ -36,13 +36,12 @@
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.5.1",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "prettier-plugin-packagejson": "^2.2.15",
+    "prettier": "^2",
+    "prettier-plugin-organize-imports": "^2",
+    "prettier-plugin-packagejson": "^2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "stylelint": "^13.13.1",
-    "typescript": "^4.1.3",
+    "typescript": "^4",
     "yorkie": "^2.0.0"
   },
   "engines": {
