--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "format": "prettier --write .",
     "lint": "alita lint",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "",
     "lint:cssinjs": "alita lint --stylelint-only --cssinjs",
     "lint:es": "alita lint --eslint-only",
     "lint:es-fix": "alita lint --eslint-only --fix",
@@ -18,7 +17,7 @@
     "start": "alita dev"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": "npm run lint-staged:js",
+    "**/*.{ts,tsx}": "alita lint",
     "**/*.{ts,tsx,json,jsx,less}": [
       "git add",
       "prettier --write"
@@ -26,7 +25,7 @@
   },
   "dependencies": {
     "@alita/flow": "^3.0.0",
-    "alita": "^3.0.7",
+    "alita": "^3.0.8",
     "antd-mobile": "^5.16.1",
     "antd-mobile-icons": "^0.2.2"
   },
@@ -35,9 +34,7 @@
     "@types/node": "^17.0.19",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
-    "@umijs/fabric": "2.6.4",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^11.1.2",
@@ -57,6 +54,6 @@
   ],
   "gitHooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "fabric verify-commit"
+    "commit-msg": "alita verify-commit"
   }
 }
