--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
   ],
   "gitHooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "alita verify-commit"
+    "commit-msg": "alita verify-commit process.env.GIT_PARAMS"
   }
 }
