--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "build": "alita build",
-    "dev": "alita dev",
-    "format": "prettier --write .",
+    "format": "prettier -c --write \"**/*\"",
     "lint": "alita lint",
     "lint-staged": "lint-staged",
     "lint:cssinjs": "alita lint --stylelint-only --cssinjs",
@@ -13,7 +12,6 @@
     "lint:es-fix": "alita lint --eslint-only --fix",
     "lint:style": "alita lint --stylelint-only",
     "lint:style-fix": "alita lint --stylelint-only --fix",
-    "plugin": "alita plugin list",
     "start": "alita dev"
   },
   "lint-staged": {
@@ -27,7 +25,9 @@
     "@alita/flow": "^3.0.0",
     "alita": "^3.0.8",
     "antd-mobile": "^5.16.1",
-    "antd-mobile-icons": "^0.2.2"
+    "antd-mobile-icons": "^0.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
@@ -36,11 +36,8 @@
     "@types/react-dom": "^17.0.13",
     "cross-env": "^7.0.3",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
     "lint-staged": "^11.1.2",
     "prettier": "^2",
-    "prettier-plugin-organize-imports": "^2",
-    "prettier-plugin-packagejson": "^2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "typescript": "^4",
@@ -54,6 +51,6 @@
   ],
   "gitHooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "alita version verify-commit 'fix: commit error https://github.com/umijs/umi/pull/8457'"
+    "commit-msg": "alita verify-commit"
   }
 }
